# rustJourney

./: .gitignore  Notes.md  README.md
chapter1/hello_cargo/: Cargo.toml
chapter1/hello_world/: main
chapter11/minigrep/: Cargo.toml
chapter11/minigrep/src/: lib.rs  main.rs
chapter2/guessing_game/: Cargo.toml
chapter2/guessing_game/src/: main  main.rs
chapter5/rectangles/: Cargo.toml
chapter5/rectangles/src/: main  main.rs
chapter7/my-project/: Cargo.toml
chapter7/my-project/restaurant/: Cargo.toml
chapter7/my-project/restaurant/src/: lib.rs
chapter8/kekw/: Cargo.toml
chapter8/kekw/src/: main.rs
grpc/: Cargo.toml  build.rs
grpc/crates/client/: Cargo.toml
grpc/crates/diesel-db/: .env  Cargo.toml
grpc/crates/diesel-db/migrations/2020-06-18-131520_create_books/: up.sql
grpc/crates/diesel-db/src/: lib.rs  main.rs  models.rs  schema.rs
grpc/crates/grpc-api/: Cargo.toml  build.rs
grpc/crates/grpc-api/proto/: bookservice.proto  items.proto
grpc/crates/grpc-api/src/: book_service.rs  items.rs
grpc/proto/: say.proto
grpc/src/: client.rs  server.rs
