[package]
name = "client"
version = "0.1.0"
authors = ["52c93648f8fbdac66640cf9cbe47f4bd988dbcc2 <anhkhav@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = {version = "0.1.0-beta.1", features = ["tls"]}
tokio = {version = "*", features = ["full"]}
clap = {git = "https://github.com/clap-rs/clap.git"}
